--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "@crello/react-lottie": "0.0.9",
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@microsoft/teams-js": "^1.6.0",
+    "dotenv": "^8.2.0",
+    "msal": "^1.2.2",
     "next": "9.3.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-hooks-global-state": "^1.0.0",
-    "react-loader-spinner": "^3.1.5",
-    "swr": "^0.2.0",
-    "use-http": "^1.0.0",
+    "react-loader-spinner": "^3.1.14",
+    "use-http": "^1.0.1",
     "use-ssr": "^1.0.23"
   },
   "devDependencies": {
